--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ datasets/
 
 # 4. 脚本临时文件（如 .sh 脚本的运行缓存，按需添加）
 *.log  trained_models_SMG_Low_Light_Enhancement/
+trained_models_SMG_Low_Light_Enhancement/
