--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,14 @@ __pycache__/
 
 # 3. 数据集（如果 data/ 是大文件，建议忽略，改用文档说明）
 data/  
-datasets/  
-
+datasets/LOL
+datasets/our485
+datasets/SID
+datasets/test
+datasets/train
+datasets/zalei
 # 4. 脚本临时文件（如 .sh 脚本的运行缓存，按需添加）
 *.log  trained_models_SMG_Low_Light_Enhancement/
 trained_models_SMG_Low_Light_Enhancement/
 # 忽略整个模型目录（递归忽略所有子文件）
 trained_models_SMG_Low_Light_Enhancement/datasets/
-datasets/LOL_real.py
-datasets/LOL_synthetic.py
-datasets/SID.py
-datasets/**/*.py
